@@ -2,6 +2,7 @@
 v3.2.0-git
 ----------
 
+[mms] Honor 'auto_update' preference when re-sorting filters list (Bug #13216).
 [mms] Fix regression in copying a rule when storing in SQL backend (Bug
       #13213).
 
